feat(playlists): forward download profile
